Adds some validation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<%= react_component("EchowingsApp", props: @hello_world_props, prerender: false) %>
+<%= react_component("EchowingsApp", props: @props, prerender: false) %>
 
