--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,20 @@
     <title>Echowings</title>
     <%= csrf_meta_tags %>
 
+    <meta property="og:type" content="product" />
+    <meta property="og:title" content="Echowings" />
+    <meta property="og:image" content="#{image_url('fb_share.jpg')}" />
+    <meta property="og:description" content="An open source project that suggests Twitter accounts with opposing political leanings to your own." />
+    <meta property="og:url" content="https://echowings.org/" />
+    <meta property="og:site_name" content="Echowings" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@sanctucompu">
+    <meta name="twitter:title" content="Echowings">
+    <meta name="twitter:description" content="An open source project that suggests Twitter accounts with opposing political leanings to your own.">
+    <meta name="twitter:image" content="#{image_url('fb_share.jpg')}">
+
+    <%= favicon_link_tag 'favicon.png' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
