--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@font-face {
+  font-family: 'Tramuntana';
+  src: font-url('Tramuntana-Heavy.woff2') format("woff2"),
+    font-url('Tramuntana-Heavy.woff') format("woff"),
+    font-url('Tramuntana-Heavy.ttf') format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
