--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <meta property="og:type" content="product" />
     <meta property="og:title" content="Echowings" />
-    <meta property="og:image" content="#{image_url('fb_share.jpg')}" />
+    <meta property="og:image" content="<%= image_url('fb_share.jpg') %>" />
     <meta property="og:description" content="An open source project that suggests Twitter accounts with opposing political leanings to your own." />
     <meta property="og:url" content="https://echowings.org/" />
     <meta property="og:site_name" content="Echowings" />
@@ -17,7 +17,7 @@
     <meta name="twitter:creator" content="@sanctucompu">
     <meta name="twitter:title" content="Echowings">
     <meta name="twitter:description" content="An open source project that suggests Twitter accounts with opposing political leanings to your own.">
-    <meta name="twitter:image" content="#{image_url('fb_share.jpg')}">
+    <meta name="twitter:image" content="<%= image_url('fb_share.jpg') %>">
 
     <%= favicon_link_tag 'favicon.png' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
