Adds Dynamic Email Copy

--- a/app/views/suggestions_mailer/send_suggestions.html.erb
+++ b/app/views/suggestions_mailer/send_suggestions.html.erb
@@ -78,7 +78,7 @@
               <tr>
                 <td class="border-bottom" style="padding: 50px 30px;" align="center" valign="top">
                   <img style="width: 100%; max-width: 283px; margin-bottom: 20px;" src="<%= image_path('monthly_picks.jpg') %>" />
-                  <h5 style="margin: 0; width: 75%; line-height: 1.5;">Showing you Republican and Democrat accounts</h5>
+                  <h5 style="margin: 0; width: 75%; line-height: 1.5;">Showing you accounts we estimate to be <%= @wing.display_results %>.</h5>
                 </td>
               </tr>
 
